# rust-charge

./: .dockerignore  .eslintignore  .gitignore  .parcelrc  .prettierignore  Cargo.toml  Dockerfile  docker-compose.alpine.yml  docker-compose.override.yml  docker-compose.production.yml  docker-compose.yml  eslint.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
migrations/2023-06-06-180802_create_charge_points/: down.sql  up.sql
migrations/2023-06-09-155814_create_transactions/: down.sql  up.sql
migrations/2024-04-01-003213_ocpp-64bit-to-32bit/: down.sql  up.sql
src/: admin.rs  charge_point.rs  db.rs  main.rs  monitor.rs  ocpp.rs
src/admin/: fake.rs
src/db/: queries.rs  schema.rs
ui/: TargetLocator.ts  app.css  app.ts  chartParts.ts  event.ts  formatters.ts  ui.html
ui/controllers/: chart_controller.ts  daily_usage_for_month_chart_controller.ts  detect_timezone_controller.ts  division_usage_for_period_chart_controller.ts  duration_controller.ts  flash_notification_controller.ts  infinite_carousel_controller.ts  relative_timestamp_controller.ts  relative_usage_chart_controller.ts
ui/elements/: DetectTimezone.ts  DivisionUsageForPeriodChart.ts  Duration.ts  FlashNotification.ts  InfiniteCarousel.ts  RelativeTimestamp.ts  RelativeUsageChart.ts
