[package]
name = "rust-charge"
version = "0.1.0"
edition = "2021"

[features]
fake-data = ["dep:rand"]

[dependencies]
axum = { version = "0.7.5", default-features = false, features = ["form", "http1", "json", "macros", "query", "ws"] }
axum-extra = { version = "0.9.3", default-features = false, features = ["cookie", "typed-header"] }
base64 = { version = "0.22.0", default-features = false, features = ["std"] }
chrono = { version = "0.4.24", default-features = false, features = ["std"] }
chrono-tz = { version = "0.10.0", default-features = false, features = ["serde"] }
const-str = { version = "0.5.5", default-features = false }
derive_more = { version = "0.99.17", default-features = false, features = ["add", "add_assign", "sum"] }
diesel = { version = "2.1.0", default-features = false, features = ["chrono", "postgres"] }
diesel-derive-newtype = { version = "2.1.0", default-features = false }
diesel_migrations = { version = "2.1.0", default-features = false, features = ["postgres"] }
dotenvy = { version = "0.15.7", default-features = false }
futures = { version = "0.3.28", default-features = false, features = ["executor"] }
hyper = { version = "1.2.0", default-features = false }
itertools = { version = "0.13.0", default-features = false, features = ["use_std"] }
maud = { version = "0.26.0", default-features = false, features = ["axum"] }
memchr = { version = "2.5.0", default-features = false, features = ["std"] }
parking_lot = { version = "0.12.1", default-features = false }
paste = { version = "1.0.12", default-features = false }
rand = { version = "0.8.5", default-features = false, features = ["std"], optional = true }
reqwest = { version = "0.12.4", default-features = false, features = ["default-tls", "json"] }
rust-ocpp = { version = "1.0.0", default-features = false, features = ["v1_6"] }
serde = { version = "1.0.163", default-features = false, features = ["derive", "std"] }
serde_json = { version = "1.0.96", default-features = false, features = ["raw_value", "std"] }
serde_urlencoded = { version = "0.7.1", default-features = false }
snafu = { version = "0.8.2", default-features = false, features = ["rust_1_65", "std"] }
tokio = { version = "1.28.2", default-features = false, features = ["macros", "rt-multi-thread", "signal"] }
tokio-stream = { version = "0.1.14", default-features = false, features = ["sync", "time"] }
tokio-util = { version = "0.7.8", default-features = false }
tower = { version = "0.4.13", default-features = false }
tower-http = { version = "0.5.2", default-features = false, features = ["fs", "request-id", "trace", "util"] }
tower-sessions = { version = "0.12.0", default-features = false, features = ["axum-core", "memory-store", "signed"] }
tracing = { version = "0.1.37", default-features = false, features = ["attributes", "std"] }
tracing-subscriber = { version = "0.3.17", default-features = false, features = ["ansi", "env-filter", "std"] }
